--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.1.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
