--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,10 @@
             "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
             "allowSeparatedGroups": false
           }
-        ]
+        ],
+        "@angular-eslint/no-empty-lifecycle-method": "off",
+        "@angular-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "off"
       }
     },
     {
