complete-linting-project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
         ],
         "@angular-eslint/no-empty-lifecycle-method": "off",
         "@angular-eslint/no-empty-function": "off",
+        "@angular-eslint/contextual-lifecycle": "off",
         "@typescript-eslint/no-empty-function": "off"
       }
     },
