--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --outputHashing=all",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "npx eslint src/**/*.{js,jsx,ts,tsx,html} --quiet --fix",
