--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.1.0",
     "bootstrap": "^3.4.1",
+    "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/leaflet": "^1.7.9",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "eslint": "^7.26.0",
