--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.3",
     "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.1.0",
+    "@ngrx/store-devtools": "^13.0.2",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
