--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,14 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+          "sort-imports": ["error", {
+              "ignoreCase": false,
+              "ignoreDeclarationSort": false,
+              "ignoreMemberSort": false,
+              "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+              "allowSeparatedGroups": false
+          }]
       }
     },
     {
