--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,7 @@
   },
   "defaultProject": "fruits-store",
   "cli": {
+    "analytics": false,
     "defaultCollection": "@angular-eslint/schematics"
   }
 }
