update-core-path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "paths": {
       "@user/components/*" : ["./src/app/user-site/components/*"],
       "@user/containers/*" : ["./src/app/user-site/containers/*"],
-      "@core/*" : ["./src/app/core/*"],
+      "@user/core/*" : ["./src/app/user-site/core/*"],
       "@shared/*" : ["./src/app/shared/*"],
       "@store/*" : ["./src/app/store/*"],
     }
