update-eslint-rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,8 @@
             "ignorePattern": "^import .*",
             "ignoreRegExpLiterals": true
           }
-        ]
+        ],
+        "no-console": ["error", { "allow": ["warn", "error"] }]
       }
     },
     {
