--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,11 @@
     "module": "es2020",
     "lib": ["es2018", "dom"],
     "paths": {
-      "@components/*" : ["./src/app/components/*"],
-      "@containers/*" : ["./src/app/containers/*"],
-      "@core/*" : ["./src/app/core/*"],
-      "@shared/*" : ["./src/app/shared/*"],
-      "@store/*" : ["./src/app/store/*"],
+      "@components/*": ["./src/app/components/*"],
+      "@containers/*": ["./src/app/containers/*"],
+      "@core/*": ["./src/app/core/*"],
+      "@shared/*": ["./src/app/shared/*"],
+      "@store/*": ["./src/app/store/*"]
     }
   },
   "angularCompilerOptions": {
