--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "prettier-eslint": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.9",
+    "@types/leaflet-draw": "^1.0.5",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
