feat(packaging): config leaflet-draw & @types/leaflet-draw

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
+              "./node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
