--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,30 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
     "paths": {
-      "@components/*": ["./src/app/components/*"],
-      "@containers/*": ["./src/app/containers/*"],
-      "@core/*": ["./src/app/core/*"],
-      "@shared/*": ["./src/app/shared/*"],
-      "@store/*": ["./src/app/store/*"]
-    }
+      "@components/*": [
+        "./src/app/components/*"
+      ],
+      "@containers/*": [
+        "./src/app/containers/*"
+      ],
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@shared/*": [
+        "./src/app/shared/*"
+      ],
+      "@store/*": [
+        "./src/app/store/*"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false
